--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -45,7 +45,7 @@
   </button>
   <div class="navbar-nav">
     <div class="nav-item text-nowrap">
-      <a class="nav-link px-3" href="{}">Sign out</a>
+      <a class="nav-link px-3" href=" url">Sign out</a>
 
     </div>
   </div>
@@ -57,15 +57,15 @@
       <div class="position-sticky pt-3">
         <ul class="nav flex-column">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{}">
+            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">
               <span><img src="https://img.icons8.com/external-kmg-design-flat-kmg-design/32/000000/external-dashboard-user-interface-kmg-design-flat-kmg-design.png"/></span>
               Dashboard
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{}">
-              <span><img src="https://img.icons8.com/color/32/000000/company.png"/> </span>
-              Empresa
+            <a class="nav-link" href="{% url 'add_server' %}">
+              <span><img src="https://img.icons8.com/color/25/000000/server.png"/> </span>
+              Agregar Servidor
             </a>
           </li>
           <li class="nav-item">
