--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -10,10 +10,10 @@
                 <td>Nombre</td>
                 <td>Dirección</td>
                 <td>Estado</td>
-                <td>Reinicio</td>
-                <td>Apagado</td>
                 <td>Memoria</td>
                 <td>Procesador</td>
+                <td>Reinicio</td>
+                <td>Apagado</td>
 
 
 
@@ -26,8 +26,13 @@
                 <td>{{e.name}}</td>
                 <td>{{e.direction}}</td>
                 <td>{{e.state}}</td>
-                <td> <a href="{% url 'restart' %}"> <img src="https://img.icons8.com/external-sbts2018-flat-sbts2018/25/000000/external-reset-basic-ui-elements-2.2-sbts2018-flat-sbts2018.png"/></a></td>
-                <td> <a href="{% url 'poweroff' %}"><img src="https://img.icons8.com/external-colours-bomsymbols-/25/000000/external-off-digital-design-colors-set-2-colours-bomsymbols-.png"/></a></td>
+                <td id="memory_free"></td>
+                <td>{{e.pro_consum}}</td>
+
+                <td>
+                     <a href="{% url 'restart' e.id_equipo %}"> <img src="https://img.icons8.com/external-sbts2018-flat-sbts2018/25/000000/external-reset-basic-ui-elements-2.2-sbts2018-flat-sbts2018.png"/></a>
+                </td>
+                <td><a href="{% url 'poweroff' e.id_equipo %}"><img src="https://img.icons8.com/external-colours-bomsymbols-/25/000000/external-off-digital-design-colors-set-2-colours-bomsymbols-.png"/></a></td>
 
 
             </tbody>
