--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -112,7 +112,7 @@
     integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
     crossorigin="anonymous"
   ></script>
-    <script src="{% static 'js/app.js'%}"></script>
+    {% comment %} <script src="{% static 'js/app.js'%}"></script> {% endcomment %}
 
     <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
 
