--- a/core/templates/core/agregar_server.html
+++ b/core/templates/core/agregar_server.html
@@ -22,8 +22,15 @@
                 {{ form.direction|as_crispy_field }}
 
               </div>
-             
-             
+              <div class="mb-4">
+                {{ form.user_admin|as_crispy_field }}
+
+              </div>
+              <div class="mb-4">
+                {{ form.passwordadmin|as_crispy_field }}
+
+              </div>
+              
 
               <div class="d-grid gap-2 d-md-block">
 
