--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -18,7 +18,7 @@
 
 
 
-
+                <p id="data.name"></p>
 
 
             </thead>
@@ -26,10 +26,15 @@
             <tbody>
                 <td>{{e.name}}</td>
                 <td>{{e.direction}}</td>
-                <td>{{e.state}}</td>
-                <td>{{e.memory_free}}/MB</td>
+                {% if e.state is True %}
+                <td><img src="https://img.icons8.com/emoji/20/000000/green-circle-emoji.png"/></td>
+                {% else %}
+                <td><img src="https://img.icons8.com/emoji/20/000000/red-circle-emoji.png"/></td>
+                {% endif %}
 
-                <td>{{e.pro_consum}}&#37;</td>
+                <td>{{e.memory_free}}/MB</td> 
+                <!-- <td>{{e.pro_consum}}&#37;</td> -->
+                <p id="pro_consum"></p>
 
                 <td>
                      <a href="{% url 'restart' e.id_equipo %}"> <img src="https://img.icons8.com/external-sbts2018-flat-sbts2018/25/000000/external-reset-basic-ui-elements-2.2-sbts2018-flat-sbts2018.png"/></a>
