function js equipos object

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -18,25 +18,27 @@
 
 
 
-                <p id="data.name"></p>
 
 
             </thead>
             {% for e in equipos  %}
             <tbody>
                 <td>{{e.name}}</td>
+
                 <td>{{e.direction}}</td>
                 {% if e.state is True %}
                 <td><img src="https://img.icons8.com/emoji/20/000000/green-circle-emoji.png"/></td>
                 {% else %}
                 <td><img src="https://img.icons8.com/emoji/20/000000/red-circle-emoji.png"/></td>
                 {% endif %}
-
+                <p>{{equipo.name}}</p>
                 <td>{{e.memory_free}}/MB</td> 
-                <!-- <td>{{e.pro_consum}}&#37;</td> -->
-                <p id="pro_consum"></p>
+
+                <td>{{e.pro_consum}}&#37;</td>
+
 
                 <td>
+                    
                      <a href="{% url 'restart' e.id_equipo %}"> <img src="https://img.icons8.com/external-sbts2018-flat-sbts2018/25/000000/external-reset-basic-ui-elements-2.2-sbts2018-flat-sbts2018.png"/></a>
                 </td>
                 <td><a href="{% url 'poweroff' e.id_equipo %}"><img src="https://img.icons8.com/external-colours-bomsymbols-/25/000000/external-off-digital-design-colors-set-2-colours-bomsymbols-.png"/></a></td>
