--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -7,7 +7,7 @@
     <meta name="generator" content="Hugo 0.84.0">
     {% load static %}
 
-    <title>Inventario</title>
+    <title>Dashboard</title>
    
 <!-- font -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
@@ -68,7 +68,7 @@
               Agregar Servidor
             </a>
           </li>
-          <li class="nav-item">
+          {% comment %} <li class="nav-item">
             <a class="nav-link" href="{}">
               <span><img src="https://img.icons8.com/color/32/000000/permanent-job.png"/></span>
               Área
@@ -91,7 +91,7 @@
               <span><img src="https://img.icons8.com/fluency/32/000000/scan-stock.png"/></span>
               Stock
             </a>
-          </li>
+          </li> {% endcomment %}
           
           
         </ul>
