--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -4,7 +4,8 @@
 {% block content %}
 <div class="container container_home ">
     <div class="row">
-        <div class=" col-md-6">
+        <div class="col-md-2"></div>
+        <div class=" col-md-8">
         <table id="table" class="table" ">
             <h6>Equipos</h6>
             <thead class="table-dark">
@@ -55,6 +56,7 @@
 
           </table>
         </div>
+        <div class="col-md-2"></div>
 
 </div>
 </div>
