--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -50,55 +50,10 @@
     </div>
   </div>
 </header>
-
-<div id=topheader class="container-fluid ">
-  <div class="row">
-    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-      <div class="position-sticky pt-3">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">
-              <span><img src="https://img.icons8.com/external-kmg-design-flat-kmg-design/32/000000/external-dashboard-user-interface-kmg-design-flat-kmg-design.png"/></span>
-              Dashboard
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'add_server' %}">
-              <span><img src="https://img.icons8.com/color/25/000000/server.png"/> </span>
-              Agregar Servidor
-            </a>
-          </li>
-          {% comment %} <li class="nav-item">
-            <a class="nav-link" href="{}">
-              <span><img src="https://img.icons8.com/color/32/000000/permanent-job.png"/></span>
-              Área
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{}">
-              <span><img src="https://img.icons8.com/color/32/000000/it.png"/></span>
-              Artículos
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{}">
-              <span><img src="https://img.icons8.com/plasticine/32/000000/move-stock.png"/></span>
-              Movimientos
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{}">
-              <span><img src="https://img.icons8.com/fluency/32/000000/scan-stock.png"/></span>
-              Stock
-            </a>
-          </li> {% endcomment %}
-          
-          
-        </ul>
-
-      </div>
-    </nav>
-
+<a class="nav-link" href="{% url 'add_server' %}">
+  <span><img src="https://img.icons8.com/nolan/64/add.png"/></span>
+  Agregar Servidor
+</a>
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
