--- a/core/templates/core/agregar_server.html
+++ b/core/templates/core/agregar_server.html
@@ -11,7 +11,7 @@
 
     <div class="col-md-6  ">
             <h5 class="titulos">Equipos</h5>
-            <form action=""method="POST"autocomplete="off"class="justify-content-center forms_st shadow-form  ">
+            <form action=""method="POST"autocomplete="off"class="justify-content-center   ">
               <div class="mb-4">
                 {% csrf_token %} 
 
