--- a/core/templates/core/agregar_server.html
+++ b/core/templates/core/agregar_server.html
@@ -10,8 +10,8 @@
     <div class="col-md-3"></div>
 
     <div class="col-md-6  ">
-            <h5 class="titulos">Equipos</h5>
-            <form action=""method="POST"autocomplete="off"class="justify-content-center   ">
+            <h5 class="titulos">Empresa</h5>
+            <form action=""method="POST"autocomplete="off"class="justify-content-center forms_st shadow-form  ">
               <div class="mb-4">
                 {% csrf_token %} 
 
@@ -30,10 +30,9 @@
                 {{ form.passwordadmin|as_crispy_field }}
 
               </div>
-              
-
               <div class="d-grid gap-2 d-md-block">
 
+                  
                   <button type="submit" class="btn btn-primary btn-color">Guardar</button>
 
 
@@ -43,5 +42,4 @@
     
 </div>
 </div>
-
 {% endblock content %}
