--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -50,16 +50,22 @@
     </div>
   </div>
 </header>
-
+div id=topheader class="container-fluid ">
+  <div class="row">
+    <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+      <div class="position-sticky pt-3">
+        <ul class="nav flex-column">
+          <li class="nav-item">
 <a class="nav-link" href="{% url 'add_server' %}">
   <span><img src="https://img.icons8.com/nolan/64/add.png"/></span>
   Agregar Servidor
 </a>
-<a class="nav-link" href="{% url 'add_server' %}">
-  <span><img src="https://img.icons8.com/nolan/64/new-message.png"/></span>
-  Enviar mensaje
-</a>
 
+
+</ul>
+
+</div>
+</nav>
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 
 
