--- a/core/templates/core/send.html
+++ b/core/templates/core/send.html
@@ -1,1 +1,28 @@
 {% extends 'core/base.html' %}
+{% load bootstrap5 %}
+
+{% load crispy_forms_tags %}
+{{form.mobile|as_crispy_field}}
+
+
+<div class="col-md-6  ">
+    <h5 class="titulos">Equipos</h5>
+    <form action=""method="POST"autocomplete="off"class="justify-content-center   ">
+      <div class="mb-4">
+        {% csrf_token %} 
+
+        {{ form.mensaje|as_crispy_field }}
+
+      </div>
+
+      
+
+          <button type="submit" class="btn btn-primary btn-color">Guardar</button>
+
+
+      </div>
+    </form>
+</div>
+
+</div>
+</div>
