--- a/core/templates/core/agregar_server.html
+++ b/core/templates/core/agregar_server.html
@@ -10,7 +10,7 @@
     <div class="col-md-3"></div>
 
     <div class="col-md-6  ">
-            <h5 class="titulos">Empresa</h5>
+            <h5 class="titulos">Server</h5>
             <form action=""method="POST"autocomplete="off"class="justify-content-center forms_st shadow-form  ">
               <div class="mb-4">
                 {% csrf_token %} 
@@ -39,7 +39,8 @@
               </div>
             </form>
     </div>
-    
+    <div class="col-md-3"></div>
+
 </div>
 </div>
 {% endblock content %}
