--- a/core/templates/core/send.html
+++ b/core/templates/core/send.html
@@ -3,26 +3,33 @@
 
 {% load crispy_forms_tags %}
 {{form.mobile|as_crispy_field}}
+{% block content %}
+
+<div class="container-sm">
+  <div class="row">
+    <div class="col-md-3"></div>
+
+    <div class="col-md-6  ">
+            <h5 class="titulos">Mensaje</h5>
+            <form action=""method="POST"autocomplete="off"class="justify-content-center forms_st shadow-form  ">
+              <div class="mb-4">
+                {% csrf_token %} 
+
+                {{ form.mensaje|as_crispy_field }}
+
+              </div>
+             
+              <div class="d-grid gap-2 d-md-block">
+
+                  
+                  <button type="submit" class="btn btn-primary btn-color">Enviar</button>
 
 
-<div class="col-md-6  ">
-    <h5 class="titulos">Equipos</h5>
-    <form action=""method="POST"autocomplete="off"class="justify-content-center   ">
-      <div class="mb-4">
-        {% csrf_token %} 
+              </div>
+            </form>
+    </div>
+    <div class="col-md-3"></div>
 
-        {{ form.mensaje|as_crispy_field }}
-
-      </div>
-
-      
-
-          <button type="submit" class="btn btn-primary btn-color">Guardar</button>
-
-
-      </div>
-    </form>
 </div>
-
 </div>
-</div>
+{% endblock content %}
