send message function

--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -31,7 +31,7 @@
                     <a href="{% url 'restart' e.id_equipo %}"> <img src="https://img.icons8.com/nolan/45/restart.png"/></a>
                     <a href="{% url 'poweroff' e.id_equipo %}"><img src="https://img.icons8.com/nolan/45/shutdown.png"/></a>
                     <a href="{% url 'delete' e.id_equipo %}"><img src="https://img.icons8.com/nolan/45/waste.png"/></a>
-                    <a href="{% url 'send' e.id_equipo %}">
+                    <a href="{% url 'sendmessage' e.id_equipo %}">
                         <img src="https://img.icons8.com/nolan/45/new-message.png"/>
                       </a>
                     </div>
