--- a/core/templates/core/send.html
+++ b/core/templates/core/send.html
@@ -11,7 +11,7 @@
 
     <div class="col-md-6  ">
             <h5 class="titulos">Mensaje</h5>
-            <form action=""method="POST"autocomplete="off"class="justify-content-center forms_st shadow-form  ">
+            <form action=""method="POST"autocomplete="off"class="justify-content-center forms_st shadow-form form-message ">
               <div class="mb-4">
                 {% csrf_token %} 
 
@@ -22,7 +22,9 @@
               <div class="d-grid gap-2 d-md-block">
 
                   
-                  <button type="submit" class="btn btn-primary btn-color">Enviar</button>
+                  <button type="submit" class="btn btn-primary btn-color">
+                    <a href=""></a>
+                    Enviar</button>
 
 
               </div>
