--- a/core/templates/core/send.html
+++ b/core/templates/core/send.html
@@ -22,7 +22,7 @@
               <div class="d-grid gap-2 d-md-block">
 
                   
-                  <button type="submit" class="btn btn-primary btn-color">
+                  <button onclick="test()" type="submit" class="btn btn-primary btn-color">
                     <a href=""></a>
                     Enviar</button>
 
