--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -90,6 +90,12 @@
     <script src="{% static 'js/app.js'%}"></script>
 
     <script src="{% static 'js/bootstrap.bundle.min.js'%}"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+   
+
+
+{% load sweetify %}
+{% sweetify %}
 
   </body>
 </html>
