--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -67,7 +67,7 @@
               Agregar Servidor
             </a>
 
-          <a class="nav-link" href="{% url 'add_server' %}">
+          <a class="nav-link" href="{% url 'config_home' %}">
             <span><img src="https://img.icons8.com/nolan/48/data-configuration.png"/></span>
             Configuraciones
           </a>
