add check servers and send email time

--- a/configuration/templates/configuration/add_config_email.html
+++ b/configuration/templates/configuration/add_config_email.html
@@ -31,6 +31,10 @@
                 {{ form.contentemail|as_crispy_field }}
 
               </div>
+              <div class="mb-4">
+                {{ form.time_mail|as_crispy_field }}
+
+              </div>
               <div class="d-grid gap-2 d-md-block">
 
                   
