--- a/configuration/templates/configuration/config_home.html
+++ b/configuration/templates/configuration/config_home.html
@@ -17,7 +17,7 @@
     </a>
     </div>
     <div class="col-md-4">
-        <a href="">
+        <a href="{% url 'config_check' %}">
         <div class="card-valores">
   
           <h4>Configuracion chequeo</h4>
