--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -45,7 +45,7 @@
   </button>
   <div class="navbar-nav">
     <div class="nav-item text-nowrap">
-      <a class="nav-link px-3" href=" url">Sign out</a>
+      <a class="nav-link px-3" href=" {% url 'logout' %}">Sign out</a>
 
     </div>
   </div>
