--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -1,28 +1,51 @@
-{% load static %}
-{% block title %}Iniciar sesión{% endblock %}
+{% extends 'registration/base.html' %}
+{% load bootstrap5 %}
+
+{% load crispy_forms_tags %}
+{{form.mobile|as_crispy_field}}{% block title %}Iniciar sesión{% endblock %}
 {% block content %}
-<style>.errorlist{color:red;}</style>
-<main role="main">
-  <div class="container">
-    <div class="row mt-3">
-      <div class="col-md-9 mx-auto mb-5">
-        <form action="" method="post">{% csrf_token %}
-          <h3 class="mb-4">Iniciar sesión</h3>
-          {% if form.non_field_errors %}
-            <p style="color:red">Usuario o contraseña incorrectos, prueba de nuevo.</p>
-          {% endif %}
-          <p>
-            <input type="text" name="username" autofocus maxlength="254" required
-              id="id_username" class="form-control" placeholder="Nombre de usuario"/>
-          </p>
-          <p>
-            <input type="password" name="password" required
-              id="id_password" class="form-control" placeholder="Contraseña"/>
-          </p>
-          <p><input type="submit" class="btn btn-primary btn-block" value="Acceder"></p>
-        </form>
-      </div>
+
+
+
+<div class="container-sm container_login">
+  <div class="row">
+    <div class="col-md-3"></div>
+
+    <div class="col-md-6 ">
+            <h5 class="titulos"></h5>
+            <form action=""method="POST"autocomplete="off"class="form justify-content-center forms_st shadow-form form_login">
+              <div class="mb-4">
+                {% csrf_token %} 
+                
+
+                {{ form.username|as_crispy_field }}
+
+                {{ form.password|as_crispy_field }}
+
+              
+
+              </div>
+              <button type="submit"class="btn btn-success">Login</button>
+
+            </form>
     </div>
-  </div>
-</main>
+    <p class="text-center">Si no tienes una cuenta, <a href="{% url 'signup' %} ">registrate</a>.</p>
+
+    
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 {% endblock %}
