--- a/registration/templates/registration/signup.html
+++ b/registration/templates/registration/signup.html
@@ -1,13 +1,18 @@
-{% load static %}
+{% extends 'registration/base.html' %}
+{% load bootstrap5 %}
+
+{% load crispy_forms_tags %}
 {% block title %}Iniciar sesión{% endblock %}
 {% block content %}
-<main  role="main">
-    <div class="container">
-        <div class="row mt-3">
+    <div class="container container_login ">
+        <div class="row ">
             <div class="col-md-9 mx-auto mb-5">
-                <form action="" method="post">{% csrf_token %}
+                <form  action="" method="post">{% csrf_token %}
                     <h3 class="mb-4">Registro</h3>
-                    {{form.as_p}}
+                    {{ form.username|as_crispy_field }}
+                    {{form.password1|as_crispy_field }}
+                    {{form.password2|as_crispy_field }}
+                    {% comment %} {{form.as_p}} {% endcomment %}
                     <p>
                         <input type="submit" value="Confirmar" class="btn btn-primary btn-block">
                     </p>
