--- a/core/static/css/dashboard.css
+++ b/core/static/css/dashboard.css
@@ -20,7 +20,10 @@ root{
 
 
 body {
- background-color:#170055;
+  background: #41295a;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #2F0743, #41295a);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #2F0743, #41295a); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
   }
 
 
@@ -133,7 +136,7 @@ body {
 
 
 #sidebarMenu{
-  background-color: #170055 !important;
+  background-color: #41295a !important;
 }
 
 
