--- a/registration/templates/registration/login.html
+++ b/registration/templates/registration/login.html
@@ -24,7 +24,7 @@
               
 
               </div>
-              <button type="submit"class="btn btn-success">Login</button>
+              <button type="submit"class="btn btn-primary">Login</button>
 
             </form>
     </div>
