--- a/registration/templates/registration/signup.html
+++ b/registration/templates/registration/signup.html
@@ -10,10 +10,13 @@
             <div class="col-xl-5 col-lg-6 col-md-8 col-sm-10 mx-auto text-center form p-4">
                 <form  action="" method="post">{% csrf_token %}
                     <h3 class="mb-4">Registro</h3>
+                    <div class="row">
                     {{ form.username|as_crispy_field }}
+                    {{form.email|as_crispy_field }}
+
                     {{form.password1|as_crispy_field }}
                     {{form.password2|as_crispy_field }}
-                    {% comment %} {{form.as_p}} {% endcomment %}
+                    </div>
                     <p>
                         <input type="submit" value="Confirmar" class="btn btn-primary btn-block">
                     </p>
