--- a/core/templates/core/agregar_server.html
+++ b/core/templates/core/agregar_server.html
@@ -7,36 +7,31 @@
 {% block content %}
 <div class="container-sm">
   <div class="row">
-    <div class="col-md-1"></div>
+    <div class="col-md-3"></div>
 
     <div class="col-md-6  ">
             <h5 class="titulos">Server</h5>
-            <form action=""method="POST"autocomplete="off"class="justify-content-center forms_st shadow-form  ">
-              
-              <div class="mb-4">
-                {% csrf_token %} 
+            <form action="" method="POST" autocomplete="off" class="row g-3 text-white forms_st">
+              {% csrf_token %} 
 
+              <div class="col-md-6">
                 {{ form.name|as_crispy_field }}
-
               </div>
-              <div class="mb-4">
+              <div class="col-md-6">
                 {{ form.direction|as_crispy_field }}
 
               </div>
-              <div class="mb-4">
+              <div class="col-md-6">
                 {{ form.user_admin|as_crispy_field }}
-
               </div>
-              <div class="mb-4">
+              <div class="col-md-6">
                 {{ form.passwordadmin|as_crispy_field }}
 
               </div>
-              <div class="d-grid gap-2 d-md-block">
-
-                  
-                  <button type="submit" class="btn btn-primary btn-color">Guardar</button>
-
-
+             
+           
+              <div class="col-12">
+                <button type="submit" class="btn btn-primary">Agregar</button>
               </div>
             </form>
     </div>
